force-app/main/default/objects/Renewal_Request__c/Renewal_Request__c.object-meta.xml
<CustomObject>
    <label>Renewal Request</label>
    <nameField>
        <label>Renewal Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>