force-app/main/default/objects/Renewal_Request__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Renewal Requests</relationshipLabel>
    <relationshipName>Renewal_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>