force-app/main/default/objects/Renewal_Request__c/fields/New_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_End_Date__c</fullName>
    <label>New_End_Date</label>
    <type>Date</type>
</CustomField>